@@ -3,18 +3,37 @@ function scimat = scimat_crop(scimat, from, to)
 %
 % SCIMAT2 = scimat_crop(SCIMAT, FROM, TO)
 %
-%   SCIMAT is a SCIMAT image or segmentation volume (see "help scimat" for
-%   details).
+%   SCIMAT is a struct with a metainfo-enriched image or segmentation (see
+%   "help scimat" for details).
 %
 %   FROM, TO are vectors with the index coordinates that define the
-%   cropping box. For example, FROM=[2 3 7], TO=[15 20 22].
+%   cropping box. The number of indices depend on the dimensionality of the
+%   image. For example, for a 3D volume, FROM=[2 3 7], TO=[15 20 22].
+%
+%   If FROM or TO don't have all the dimensions, those dimensions are not
+%   cropped. E.g. in an image with size [256 512 128 10],
+%
+%     FROM=[50 75];
+%     TO=[100 89];
+%
+%   is the same as
+%
+%     FROM=[50 75 1 1];
+%     TO=[100 89 128 10];
 %
 %   SCIMAT2 is the cropped volume.
+%
+% Example:
+%
+%   % create example scimat struct
+%   scimat = scimat_im2scimat(zeros(256, 512, 128), [2 3 5], [-3.0 7.0 11.0]);
+%
+%   % crop struct
+%   scimat2 = scimat_crop(scimat, [50 75], [100 89]);
 
-% Author: Ramon Casero <rcasero@gmail.com>
-% Modified by Benjamin Villard <b.016434@gmail.com>
-% Copyright © 2011-2014 University of Oxford
-% Version: 0.2.1
+% Authors: Ramon Casero <rcasero@gmail.com>, Benjamin Villard <b.016434@gmail.com>
+% Copyright © 2011-2015 University of Oxford
+% Version: 0.3.0
 % $Rev$
 % $Date$
 % 
@@ -45,25 +64,46 @@ function scimat = scimat_crop(scimat, from, to)
 narginchk(3, 3);
 nargoutchk(0, 1);
 
-% if we have 2-vectors, make them 3-vectors for uniformity
-if (length(from) == 2)
-    from(3) = 1;
-end
-if (length(to) == 2)
-    to(3) = 1;
+% we only work with up to 4D images
+MAXDIM = 4;
+if (ndims(scimat.data) > MAXDIM)
+    error('Image in SCIMAT must be 1D, 2D, 3D or 4D')
 end
 
-% crop the data volume, Check for 3D/4D volume
-if (size(scimat.data) == 3)
-    scimat.data = scimat.data(from(1):to(1), from(2):to(2), from(3):to(3), :);
+% FROM and TO can be shorter than the number of dimensions of the image,
+% but not longer
+if (length(from) > ndims(scimat.data))
+    error('FROM has more dimensions than the image')
 end
-if (size(scimat.data) == 4)
-    scimat.data = scimat.data(from(1):to(1), from(2):to(2), :, :);
+if (length(to) > ndims(scimat.data))
+    error('TO has more dimensions than the image')
 end
 
+% default: extend "from" and "to" with dummy dimensions, if necessary, so
+% that they are 4D
+% E.g. in an image with size [256 512 128 10],
+%
+%     FROM=[50 75];
+%     TO=[100 89];
+%
+%   is the same as
+%
+%     FROM=[50 75 1 1];
+%     TO=[100 89 128 10];
+%
+% In addition, a 2D image with size [256 512] can be cropped as if it were
+% a 4D image with size [256 512 1 1]
+sz = size(scimat.data);
+sz(length(sz)+1:MAXDIM) = 1;
+from(length(from)+1:MAXDIM) = 1;
+to(length(to)+1:MAXDIM) = sz(length(to)+1:MAXDIM);
+
+% crop the image
+scimat.data = scimat.data(from(1):to(1), from(2):to(2), from(3):to(3), ...
+    from(4):to(4));
 
 % correct the metainformation in the scimat volume
-for I = 1:3
+for I = 1:ndims(scimat.data)
     
     % size
     scimat.axis(I).size = size(scimat.data, I);
@@ -71,9 +111,5 @@ for I = 1:3
     % "left" edge of first voxel
     scimat.axis(I).min = scimat.axis(I).min ...
         + (from(I) - 1) * scimat.axis(I).spacing;
-    
-    % "left" edge of last voxel
-    scimat.axis(I).max = scimat.axis(I).min ...
-        + (scimat.axis(I).size - 1) * scimat.axis(I).spacing;
     
 end
